assets/app.css
/* ... */
.form-group .bar{
    position:relative;
    border-bottom:.0625rem solid #2e2e2e;
    display:block
}
.form-group .bar:before{
    content:"";
    height:.125rem;
    width:0;
    left:50%;
    bottom:-.0625rem;
    position:absolute;
    background:#2e2e2e;
    transition:left .28s ease,width .28s ease;
    z-index:2
}
.form-group input,.form-group textarea{
    display:block;
    background:none;
    padding:.125rem .125rem .0625rem;
    font-size:17px;
    border-width:0;
    border-color:transparent;
    line-height:1.9;
    width:100%;
    transition:all .28s ease;
    box-shadow:none
}
@media (max-width:1440px){
    .form-group input,.form-group textarea{
        font-size:14px
    }
}
.form-group input:focus{
    color:#2e2e2e
}
.form-group.form-input-check .control-label,.form-group input:focus~.control-label{
    font-size:16px;
    color:grey;
    top:-2.2rem;
    left:0
}
.form-group input:focus{
    outline:none
}
.form-group.form-input-check .control-label,.form-group input:focus~.control-label{
    color:#2e2e2e;
    font-weight:500
}
.form-group input:focus~.bar:before{
    width:100%;
    left:0
}
.subscribe-form .form-group input input:-webkit-autofill,.subscribe-form .form-group input input:-webkit-autofill:active,.subscribe-form .form-group input input:-webkit-autofill:focus,.subscribe-form .form-group input input:-webkit-autofill:hover{
    -webkit-box-shadow:0 0 0 30px red inset!important
}
.button-container{
    margin-top:-30px;
    margin-left:-140px
}
@media (max-width:480px){
    .button-container{
        margin-top:0;
        margin-left:0;
        width:100%
    }
}
.banner-button-container{
    margin-top:45px;
    margin-left:0
}
@media (max-width:991px){
    .banner-button-container{
        display:flex;
        justify-content:center
    }
}
.submit-button{
    border-radius:5px;
    background-color:#2d2d2d;
    height:50px;
    color:#fff;
    padding:16px 28px;
    margin-right: 20px;
    line-height:1;
    font-size:16px;
    transition:all .3s ease
}
.submit-button:hover{
    color:#fff;
    box-shadow:0 12px 24px -10px rgba(0,0,0,.78)
}
@media (max-width:480px){
    .submit-button{
        width:100%
    }
}
.navbar-container{
    display:flex
}
@media (max-width:991px){
    .navbar-container{
        justify-content:space-between;
        flex-wrap:wrap;
        padding-left:0;
        padding-right:0
    }
}
@media (max-width:480px){
    .navbar-container{
        flex-wrap:wrap;
        justify-content:space-between
    }
}
@media (max-width:991px){
    .navbar-container.container-two{
        padding-left:0;
        padding-right:0
    }
}
.nav-menu-ul{
    flex-direction:row;
    justify-content:center;
    align-items:center;
    display:flex;
    width:100%
}
.navbar.mainnav{
    padding:1.2rem 3rem
}
@media (max-width:480px){
    .navbar.mainnav{
        padding:1.2rem 1rem
    }
}
.navbar-brand{
    max-width:100%
}
.navbar-brand img{
    -o-object-fit:cover;
    object-fit:cover
}
.navbar-brand:focus{
    outline:none
}
.navbar.mainnav .nav-menu-ul .nav-link{
    padding-right:25px;
    padding-left:25px;
    font-size:16px;
    color:#2d2d2d
}
@media (max-width:991px){
    .navbar.mainnav .nav-menu-ul .nav-link{
        padding-left:0
    }
}
.navbar-light .navbar-text{
    color:#fff
}
.container-two{
    margin-left:auto;
    margin-right:auto;
    padding-left:20px;
    padding-right:20px;
    width:100%
}
footer{
    background:#2d2d2d;
    width:100%
}
.main-footer,footer{
    display:flex;
    flex-direction:column
}
.main-footer{
    padding:60px 0 40px;
    justify-content:center;
    align-items:center
}
@media (max-width:480px){
    .main-footer{
        padding:30px 0!important
    }
}
.main-footer ul{
    flex-direction:row;
    justify-content:center;
    align-items:center;
    display:flex;
    width:100%;
    margin-top:35px
}
@media (max-width:480px){
    .main-footer ul{
        flex-direction:column;
        margin:0;
        padding:0
    }
}
.main-footer ul li{
    list-style-type:none;
    font-weight:600
}
.main-footer ul .nav-link{
    padding-right:25px;
    padding-left:25px;
    font-size:16px;
    color:#fff;
    font-weight:500
}
@media (max-width:480px){
    .main-footer ul .nav-link{
        margin-bottom:10px
    }
}
.main-footer ul .nav-link:hover{
    color:#428bca
}
.copyright-text{
    display:flex;
    justify-content:center;
    align-items:center;
    border-top:1px solid #3a3a3a;
    padding:15px 0 20px
}
.copyright-text a:focus,.copyright-text a:hover,.copyright-text a:visited{
    text-decoration:none
}
.copyright-text p{
    font-size:14px;
    color:#fff;
    text-align:center;
    margin-bottom:0
}
.section-header{
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center
}
.section-header h1{
    margin-bottom:20px
}
@media (max-width:1440px){
    .section-header h1{
        margin-bottom:15px
    }
}
.section-header p{
    text-align:center;
    max-width:760px
}
.btn-group .btn-free{
    border-radius:5px;
    background-color:#2dc96c;
    height:50px;
    color:#fff;
    padding:0;
    line-height:1;
    border:1px solid #2dc96c;
    font-size:16px;
    margin-right:12px;
    transition:all .3s ease;
    text-decoration:none;
    position:relative
}
.btn-group .btn-free:hover{
    color:#fff;
    box-shadow:0 12px 24px -10px rgba(39,187,99,.78)
}
.btn-group .btn-live{
    border-radius:5px;
    background-color:#2d2d2d;
    height:50px;
    color:#fff;
    padding:16px 28px;
    line-height:1;
    border:1px solid #2d2d2d;
    font-size:16px;
    transition:all .3s ease
}
.btn-group .btn-live:hover{
    color:#fff;
    box-shadow:0 12px 24px -10px rgba(0,0,0,.78)
}
.btn-group .btn-live:focus{
    text-decoration:none
}
@media (min-width:768px){
    .container-two{
        max-width:750px
    }
}
@media (min-width:992px){
    .container-two{
        max-width:970px
    }
}
@media (min-width:1200px){
    .container-two{
        max-width:1170px
    }
}
/* ... */

